--- a/my_site/my_app/templates/my_app/example.html
+++ b/my_site/my_app/templates/my_app/example.html
@@ -6,4 +6,8 @@
 <h2>example simple</h2>
 <img src="{% static 'my_app/jesus.png' %}" alt="mi_img">
 
+
+{% for usuario in usuarios%}
+    <li>{{usuario.first_name}}</li>
+{% endfor %}
 {% endblock %}
