--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -11,6 +11,8 @@
     <link href="{% static 'css/mycss.css'%}" rel="stylesheet">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+    <link href="{% static 'my_app/custom.css'%}" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
