--- a/my_site/my_app/templates/my_app/example.html
+++ b/my_site/my_app/templates/my_app/example.html
@@ -14,8 +14,9 @@
 {% if user.is_authenticated %}
 <p>You are logged in.</p>
 <p>Welcome {{user.get_username}}</p>
+<a href="{% url 'logout' %}?next={{request.path}}">Logout</a>
 {% else %}
 <p>You are not logged in</p>
-
+<a href="{% url 'login' %}?next={{request.path}}">Login</a>
 {% endif %}
 {% endblock %}
