--- a/my_site/my_app/templates/my_app/example.html
+++ b/my_site/my_app/templates/my_app/example.html
@@ -17,6 +17,7 @@
 <a href="{% url 'logout' %}?next={{request.path}}">Logout</a>
 {% else %}
 <p>You are not logged in</p>
-<a href="{% url 'login' %}?next={{request.path}}">Login</a>
+<a href="{% url 'login' %}?next={{request.path}}">Login</a> <br>
+<a href="{% url 'my_app:signup' %}">Sign up</a>
 {% endif %}
 {% endblock %}
