--- a/my_site/static/css/mycss.css
+++ b/my_site/static/css/mycss.css
@@ -1,3 +1,19 @@
 .navbar{
-    background-color: rgb(71, 202, 253);
+    background-color: rgb(136, 134, 255);
+    padding: 0;
+}
+
+.container-fluid{
+    align-items: center;
+    padding: 15px;
+}
+
+.menu-btn{
+    color: black;
+}
+
+.login-btn{
+    color: rgb(66, 3, 212);
+    border: 1px solid rgb(66, 3, 212);
+    border-radius: 5px;
 }
