--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -13,20 +13,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     <link href="{% static 'my_app/custom.css'%}" rel="stylesheet">
-    <title>Document</title>
+    <title>JCVega</title>
 </head>
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+        <div class="container-fluid container">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="{% url 'my_app:simple' %}">Home</a>
-              <a class="nav-link" href="{% url 'my_app:variable' %}">Variable</a>
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link active menu-btn" href="{% url 'my_app:simple' %}">Home</a>
+              <a class="nav-link menu-btn" href="{% url 'my_app:acercade' %}">Acerca</a>
+              <a class="nav-link menu-btn" href="#">Pricing</a>
+              <a class="nav-link login-btn" href="{% url 'login' %}?next={{request.path}}">Login</a>
+              <a class="nav-link menu-btn" href="{% url 'my_app:signup' %}">Sign up</a>
             </div>
           </div>
         </div>
