--- a/my_site/static/css/mycss.css
+++ b/my_site/static/css/mycss.css
@@ -1,11 +1,13 @@
 .navbar{
     background-color: rgb(136, 134, 255);
-    padding: 0;
 }
 
-.container-fluid{
-    align-items: center;
-    padding: 15px;
+@media (max-width: 992px) {
+    .navbar .navbar-nav .nav-item .nav-link {
+        border-bottom:1px solid rgb(100, 100, 100);
+        border-radius: 0;
+        padding: .75rem 0!important
+    }
 }
 
 .menu-btn{
