--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -16,24 +16,32 @@
     <title>JCVega</title>
 </head>
 <body>
-    <!-- NAVBAR -->
+
+    <header>
+      <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active menu-btn" href="{% url 'my_app:simple' %}">Home</a>
-              <a class="nav-link menu-btn" href="{% url 'my_app:acercade' %}">Acerca</a>
-              <a class="nav-link menu-btn" href="#">Pricing</a>
-              <a class="nav-link login-btn" href="{% url 'login' %}?next={{request.path}}">Login</a>
-              <a class="nav-link menu-btn" href="{% url 'my_app:signup' %}">Sign up</a>
+      <div class="container ">
+        <a class="navbar-brand" href="{% url 'my_app:simple' %}"><img src="{% static 'my_app/jesus.png' %}" alt="logo" width="100" height="50"/></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav mx-auto align-items-lg-center">
+              <li class="nav-item dropdown"><a class="nav-link active menu-btn" href="{% url 'my_app:simple' %}">Home</a></li>
+              <li class="nav-item dropdown"><a class="nav-link menu-btn" href="{% url 'my_app:acercade' %}">Acerca</a></li>
+              <li class="nav-item dropdown"><a class="nav-link menu-btn" href="#">Pricing</a></li>
+            </ul>
+            <div class="mt-3 mt-lg-0 d-flex align-items-center">
+              <a class="btn btn-light mx-2" href="{% url 'login' %}?next={{request.path}}">Login</a>
+              <a class="btn btn-primary" href="{% url 'my_app:signup' %}">Sign up</a>
             </div>
-          </div>
+                
         </div>
-    </nav>
-    
+     
+        
+      </div>
+  </nav>
+    </header>
 
     {% block content%}
 
