--- a/my_site/static/css/mycss.css
+++ b/my_site/static/css/mycss.css
@@ -2,6 +2,13 @@
     background-color: rgb(136, 134, 255);
 }
 
+.navbar-absolute-top{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 @media (max-width: 992px) {
     .navbar .navbar-nav .nav-item .nav-link {
         border-bottom:1px solid rgb(100, 100, 100);
